fixed horizontal scroll of dashboard

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   background: #FAFAFA;
+  overflow-x: hidden;
 }
 
 h1,
